# nw-programmability-and-automation

./: .gitignore  README.md  pyproject.toml
ubuntu-21.04/: Vagrantfile
vm/: destroy.sh  reload.sh  up.sh
vm/centos-8/: Vagrantfile
