[tool.poetry]
name = "nw-programmability-and-automation"
version = "0.1.0"
description = ""
authors = ["4hei4hei"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^5.4.0"
Jinja2 = "^3.0.3"
requests = "^2.27.1"
ncclient = "^0.6.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
